# ppx_spice

./: .editorconfig  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  bsconfig.json  package.json  postInstall.js  ppx  rescript.json
.changeset/: dirty-nails-melt.md  pre.json  seven-timers-hammer.md
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  publish.yml  publish_prerelease.yml
docs/: GUIDE.md
examples/: .gitignore  bsconfig.json  package.json  pnpm-lock.yaml  rescript.json
examples/src/: Advancded.js  Advancded.res  Advanced.js  Advanced.res  Basic.js  Basic.res  CustomCodecs.js  CustomCodecs.res  CustomCodecs2.js  CustomCodecs2.res  CustomCodecs3.js  CustomCodecs3.res  Tuple.js  Tuple.res  UntaggedVariant.js  UntaggedVariant.res  Variants.js  Variants.res  Variants2.js  Variants2.res
src/: .gitignore  dune-project  esy.json  ppx_spice.install  ppx_spice.opam
src/esy.lock/: index.json
src/ppx/: codecs.ml  codecs.mli  configs.ml  decode_cases.ml  dune  polyvariants.ml  polyvariants.mli  polyvariants.re  ppx_spice.ml  records.ml  records.re  signature.ml  signature.mli  structure.ml  structure.mli  tuple.ml  tuple.mli  tuple.re  utils.ml  variants.ml  variants.re
src/ppx/curried/: codecs_curried.ml  polyvariants_curried.ml  records_curried.ml  structure_curried.ml  tuple_curried.ml  variants_curried.ml
src/ppx/uncurried/: codecs_uncurried.ml  polyvariants_uncurried.ml  records_uncurried.ml  records_uncurried.mli  signature_uncurried.ml  structure_uncurried.ml  tuple_uncurried.ml  variants_uncurried.ml  variants_uncurried.mli
src/rescript/: Spice.js  Spice.res  Spice_Codecs.js  Spice_Codecs.res
test/: README.md  b.res  bsconfig.json  package.json  pnpm-lock.yaml  rescript.json
test/__tests__/: test.js  test.res  test_encode_decode.js  test_encode_decode.res  test_optional_field_records.js  test_optional_field_records.res  test_polyvariants.js  test_polyvariants.res  test_records.js  test_records.res  test_variants.js  (+1 more)
(+79 files in other folders)
