opam-version: "2.0"
name: "ppx_spice"
version: "0.3.3"
synopsis: "ReScript PPX which generate JSON (de)serializer"
description: """
ReScript PPX which generate JSON (de)serializer
"""
maintainer: "mununki <woonki.moon@gmail.com>"
authors: "mununki <woonki.moon@gmail.com>"
license: "MIT"
homepage: "https://github.com/mununki/ppx_spice"
bug-reports: "https://github.com/mununki/ppx_spice/issues"
dev-repo: "git+https://github.com/mununki/ppx_spice.git"
depends: [
  "ocaml" {>= "4.14.0" & <= "4.14.2"}
  "dune" { >= "2.8"}
  "ppxlib" { = "0.28.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
